adds clients controller